fixed font-sizing issues, cropped images for load speed

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -46,7 +46,7 @@ nav ul {
 
 h6,
 .card-text {
-    font-size: 0.70em;
+    font-size: 0.65em;
 }
 
 li {
@@ -154,6 +154,12 @@ a,
     height: auto;
 }
   
+@media only screen and (min-width: 1000px) and (max-width: 1400px) {
+
+    h6, .card-text {
+      font-size: calc(1px + 1vw);
+    }
+}
 
 
 @media only screen and (max-width: 550px) {
@@ -182,6 +188,7 @@ a,
       font-size: calc(16px + 1vw);
     }
     h6, .card-text {
-      font-size: calc(10px + 1vw);
+      font-size: calc(8px + 1vw);
     }
 }
+
